--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     ports:
       - "5000:5000"
     container_name: barnyard-api1
+    restart: on-failure
+    command: sh -c "sleep 50 && ./main"
 
   barnyard-web:
     build: .
